--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>2.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-assertions-generator</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
